# HyperMatrix_v2026.01

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIA_USUARIO.md  README.md  RESUMEN_EJECUTIVO.md  ROADMAP.md  config.py  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  pyproject.toml  requirements-embeddings.txt  requirements.txt  run_server.py  run_web.py
.github/workflows/: ci.yml
config/knowledge/: hypermatrix_kb.md
docs/: API_MANUAL.md  HYPERMATRIX_ROADMAP_v2.md  tgd_different_files.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AIPanel.jsx  Breadcrumbs.jsx  Button.jsx  Card.jsx  ErrorBoundary.jsx  FileBrowser.jsx  FolderUploader.jsx  Layout.jsx  ProjectSelector.jsx  ScanSelector.jsx  SearchBar.jsx  Sidebar.jsx  ThemeToggle.jsx
frontend/src/contexts/: AIContext.jsx
frontend/src/pages/: Analysis.jsx  BatchActions.jsx  Compare.jsx  Context.jsx  Dashboard.jsx  DeadCode.jsx  (+12 more)
frontend/tests/: hypermatrix.spec.ts
scripts/: analyze_versions.py  create_true_unified_project.py  create_unified_project.py  generate_consolidation_report.py  run_fusion.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  server.py
src/core/: __init__.py  analyzer.py  clone_detector.py  code_metrics.py  consolidation.py  context_builder.py  db_manager.py  dead_code_detector.py  deep_analyzer.py  docs_detector.py  fusion.py  impact_analyzer.py  lineage.py  merge_validator.py  metrics.py  ml_learning.py  natural_search.py  project_comparator.py  quality_analyzer.py  refactoring_suggester.py  semantic_analyzer.py  summary.py  version_tracker.py  watcher.py  webhooks.py
src/embeddings/: __init__.py  engine.py
src/parsers/: __init__.py  parser_css.py  parser_html.py  parser_javascript.py  parser_json.py  parser_markdown.py  parser_python.py  parser_sql.py  parser_typescript.py  parser_yaml.py
src/phases/: __init__.py  phase1_5_deduplication.py  phase1_discovery.py  phase2_analysis.py  phase3_consolidation.py  phase4_documentation.py
src/visualization/: __init__.py  graph_generator.py  report_html.py
src/web/: __init__.py  app.py  models.py
tests/: BACKUP_BEFORE_FEATURE2.json  __init__.py  advanced_test.py  conftest.py  e2e_test.js  run_all_tests.py  smoke_test.py  stress_test.py  test_integration.py  test_parser_javascript.py  test_parser_json.py  test_parser_markdown.py  test_parser_python.py
tools/: analyze_structure.py  build_project.py  copy_duplicates_renamed.py  copy_identical_files.py  create_compacted_project.py  deduplicate_safe.py  estructura.json  fix_small_originals.py  reorganize_project.py  run_unification.py  unify_versions.py
utils/: __init__.py  config.py
(+28 files in other folders)
